# awesome

./: eternamind.html  mpc-cones.html
eternamind/: .env.example  .gitignore  README.md  pyproject.toml
eternamind/src/eternamind/: __init__.py  agent_scorer.py  ccl.py  ccm.py  cli.py  config.py  engine.py  identity_tracker.py  integration_layer.py  models.py  tgm.py
eternamind/src/eternamind/agents/: __init__.py  base.py  creative_agent.py  executive_agent.py  memory_agent.py  perceptual_agent.py  predictive_agent.py  reflective_agent.py  social_agent.py  temporal_agent.py
eternamind/src/eternamind/storage/: __init__.py  sqlite_store.py  vector_store.py
flux/: ast_nodes.py  lexer.py  parser.py
flux/tests/: test_lexer.py  test_parser.py
transaction-light-cycles/: index.html
