[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eternamind"
version = "0.1.0"
description = "A continuous, unified cognitive entity — EternaMind"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "chromadb>=0.5.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
eternamind = "eternamind.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/eternamind"]
